fix(link): removed hover on mobile devices (#1134)

--- a/packages/link/src/index.module.css
+++ b/packages/link/src/index.module.css
@@ -7,7 +7,12 @@
     cursor: pointer;
     outline: none;
 
-    &:hover .text,
+    @media (hover: hover) {
+        &:hover .text {
+            border-bottom-color: rgba(0, 0, 0, 0);
+        }
+    }
+
     &:active .text {
         border-bottom-color: rgba(0, 0, 0, 0);
     }
